pyk/src/tests/unit/kore/test-data/definitions/should-fail/test-hooks-5.kore
[]

module TEST-HOOKS-5

  sort S{} []

  // Verification failure: missing hook attribute
  hooked-symbol f{}() : S{} []

endmodule []
